--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<meta name="twitter:image:width" content="600">
 	<meta name="twitter:image:height" content="600">
 	<!--================================================== CSS  ================================================== -->
-	<link rel="stylesheet" href="css/styleMinKo.css" />
+	<link rel="stylesheet" href="css/styleMin.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
 	 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" >
@@ -294,7 +294,7 @@
 			<div class="teamCard">
 
 				<article class="four columns cardFlo" data-scroll-reveal="enter bottom move 100px over 0.2s after 0.2s">
-					<div class="card"><img src="images/team1.png" alt="Photo portrait de Sébastien" />
+					<div class="card"><img src="images/teamA.png" alt="Photo portrait de Sébastien" />
 						<div class="info">
 							<h4>Créative développeur</h4>
 							<p class="textCard">39 ans
@@ -313,7 +313,7 @@
 					<h4>Sébastien Champalaune</h4>
 				</article>
 				<article class="four columns cardFlo" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
-					<div class="card"><img src="images/team2.png" alt="Photo portrait de Florent" />
+					<div class="card"><img src="images/teamB.png" alt="Photo portrait de Florent" />
 						<div class="info">
 							<h4>Développeur front / back end</h4>
 							<p class="textCard">37 ans
