--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -41,7 +41,7 @@
     
 </head>
 
-<body>
+<body id="mainMentions">
     <!--================================================== HEADER    ================================================== -->
 	<nav class="menu">
             <div class="logo"></div>
