--- a/offres.html
+++ b/offres.html
@@ -32,7 +32,7 @@
 	<meta name="twitter:description" content="Warp-Code, Agence Web Créative" />
 	<meta name="twitter:image" content="images/lion.png" />
 	<!--================================================== CSS  ================================================== -->
-	<link rel="stylesheet" href="css/styleMinKO.css" />
+	<link rel="stylesheet" href="css/styleMin.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
@@ -97,7 +97,7 @@
 						<a href="#webMarket">Web Marketing</a>
 					</li>
 					<li class="tipped " data-title="Référencement">
-						<a class="#ref" href="#ref">Référencement</a>
+						<a href="#ref">Référencement</a>
 					</li>
 				</ul>
 			</nav>
@@ -214,9 +214,6 @@
 					<li class="spaceLine"> ...</li>
 				</ul>
 			</div>
-			<!-- <a href="#about2" title="Pour faire doucement glisser la page" data-gal="m_PageScroll2id" data-ps2id-offset="-2350">
-						<div class="link-down fade-elements"></div>
-					</a> -->
 		</div>
 
 		<div class="page documentation vlockCol2">
@@ -441,18 +438,6 @@
 		</div>
 
 	</section>
-
-	<!-- <div class="middle scroll">
-		<img src="images/ligne.png" alt="première ligne de décoration du fond">
-	</div>
-	<div class="horizon scroll">
-		<img src="images/ligne2.png" alt="seconde ligne de décoration du fond">
-	</div> -->
-
-
-
-
-
 	<!--==================================================  FOOTER    ================================================== -->
 	<footer class="section back-dark padding-top-bottom jammin">
 
@@ -501,7 +486,7 @@
 				{
 					height: 6000, // optional: define the height the user can scroll, otherwise the overall length will be taken as scrollable height
 					onScroll: function (percent) { //optional: callback function that will be called when the user scrolls down, useful for animating other things on the page
-						console.log(percent);
+						
 					}
 				});
 		}(jQuery));
