--- a/services.html
+++ b/services.html
@@ -32,10 +32,11 @@
     <meta name="twitter:description" content="Warp-Code, Agence Web Créative" />
     <meta name="twitter:image" content="images/lion.png" />
     <!--================================================== CSS  ================================================== -->
-    <link rel="stylesheet" href="css/styleMinKO.css" />
+    <link rel="stylesheet" href="css/styleMin.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" >
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <!-- ==================================================Favicons	================================================== -->
@@ -61,7 +62,7 @@
     <div id="royal_preloader"></div>
 
     <!--==================================================MENU    ================================================== -->
-
+<header id="home">
     <nav class="menu">
         <div class="logo"></div>
         <ul>
@@ -72,7 +73,7 @@
             <li class="close-menu"><a href="index.html#contactForm" title="Accès aux informations de contact">Contact</a></li>
         </ul>
     </nav>
-
+</header>
     <div class="burger">
         <svg width="100px" height="100px">
             <path class="top" d="M 30 40 L 70 40 C 90 40 90 75 60 85 A 40 40 0 0 1 20 20 L 80 80"></path>
@@ -290,7 +291,6 @@
 
 
     <script src="js/jquery-2.1.1.js"></script>
-    <script src="js/jquery.jInvertScroll.js"></script>
     <script src="js/script.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
