--- a/offres.html
+++ b/offres.html
@@ -73,19 +73,7 @@
       <!--==================================================Sections ================================================== -->
       <section class="front scroll">
          <div class="page description2 vlockCol">
-            <nav id="services-filter">
-               <ul id="filter" class="nav">
-                  <li class="tipped" data-title="Maintenance">
-                     <a href="#maintenance" class="current">Maintenance</a>
-                  </li>
-                  <li class="tipped" data-title="Web-Marketing">
-                     <a href="#webMarket">Web Marketing</a>
-                  </li>
-                  <li class="tipped " data-title="Référencement">
-                     <a href="#ref">Référencement</a>
-                  </li>
-               </ul>
-            </nav>
+           
             <div class="blockCol" id="maintenance" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
                <article class="titreSvg">
                   <div class="svg-icon">
@@ -166,7 +154,7 @@
                   </div>
                   <h3 class="h3Men">Forfait Horaire</h3>
                </article>
-               <p>Si vous choisissez aucune <span class="whitey">Webmastering</span> pour assurer le suivi de nos services,
+               <p>Si vous choisissez aucune offre <span class="whitey">Webmastering</span> pour assurer le suivi de nos services,
                   nous restons à votre disposition pour vous faire bénéficier de nos compétences. Cependant, le Forfait Horaire
                   s'appliquera. Celui-ci sera variable et ajusté au travail déjà réalisé pour votre site.
                </p>
@@ -197,19 +185,7 @@
             </div>
          </div>
          <div class="page documentation vlockCol2">
-            <nav id="services-filter">
-               <ul id="filter" class="nav">
-                  <li class="tipped" data-title="Maintenance">
-                     <a href="#maintenance">Maintenance</a>
-                  </li>
-                  <li class="tipped" data-title="Web-Marketing">
-                     <a class="current" href="#webMarket">Web Marketing</a>
-                  </li>
-                  <li class="tipped " data-title="Référencement">
-                     <a class="#ref" href="#ref">Référencement</a>
-                  </li>
-               </ul>
-            </nav>
+
             <div class="blockCol" id="about2" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
                <article id="webMarket" class="titreSvg">
                   <div class="svg-icon">
@@ -312,19 +288,7 @@
             </div>
          </div>
          <div class="page options vlockCol3">
-            <nav id="services-filter">
-               <ul id="filter" class="nav">
-                  <li class="tipped" data-title="Maintenance">
-                     <a href="#maintenance">Maintenance</a>
-                  </li>
-                  <li class="tipped" data-title="Web-Marketing">
-                     <a href="#webMarket">Web Marketing</a>
-                  </li>
-                  <li class="tipped " data-title="Référencement">
-                     <a class="current" href="#ref">Référencement</a>
-                  </li>
-               </ul>
-            </nav>
+
             <div class="blockCol" id="ref" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
                <article class="titreSvg">
                   <div class="svg-icon">
@@ -403,6 +367,19 @@
                </p>
             </div>
          </div>
+         <nav id="services-filter" class="bandeau">
+            <ul id="filter" class="nav">
+               <li class="tipped" data-title="Maintenance">
+                  <a href="#maintenance">Maintenance</a>
+               </li>
+               <li class="tipped" data-title="Web-Marketing">
+                  <a href="#webMarket">Web Marketing</a>
+               </li>
+               <li class="tipped " data-title="Référencement">
+                  <a href="#ref">Référencement</a>
+               </li>
+            </ul>
+         </nav>
       </section>
       <!--==================================================  FOOTER    ================================================== -->
       <footer class="section back-dark padding-top-bottom jammin">
