--- a/offres.html
+++ b/offres.html
@@ -373,7 +373,7 @@
                   <a href="#maintenance">Maintenance</a>
                </li>
                <li class="tipped" data-title="Web-Marketing">
-                  <a href="#webMarket">Web Marketing</a>
+                  <a href="#webMarket">Web&nbsp;Marketing</a>
                </li>
                <li class="tipped " data-title="Référencement">
                   <a href="#ref">Référencement</a>
@@ -394,11 +394,11 @@
             <div class="social-footer">
                <ul class="list-social-footer">
                   <li class="icon-footer tipped" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}'>
-                     <a href="https://twitter.com/code_warp" title="lien externe vers le compte Twitter de WarpCode"><i class="fab fa-twitter"></i></a>
-                  </li>
-                  <li class="icon-footer tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
-                     <a href="https://www.facebook.com/WarpCode56" title="lien externe vers le compte Facebook de WarpCode"><i class="fab fa-facebook-f"></i></a>
-                  </li>
+                        <a href="https://twitter.com/code_warp" title="lien externe vers le compte Twitter de WarpCode"><img id="logoS" src="images/twitter.png" alt="logo twitter"/></a>
+                     </li>
+                     <li class="icon-footer tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
+                        <a href="https://www.facebook.com/WarpCode56" title="lien externe vers le compte Facebook de WarpCode"><img id="logoS2" src="images/face.png" alt="logo facebook" /> </a>
+                     </li>
                </ul>
             </div>
          </div>
