--- a/services.html
+++ b/services.html
@@ -77,7 +77,7 @@
          <article class="contenu">
             <div class="carte">
                <figure class="devant">
-                  <img src="http://www.jboeijenga.nl/img/front.jpg" alt="devant">
+                  <img src="images/vitrine.png" alt="photo tablette-portable pour le site vitrine">
                   <div class="legend">
                      <h2>Site <span>&nbsp;Vitrine</span></h2>
                   </div>
@@ -101,7 +101,7 @@
          <article class="contenu">
             <div class="carte">
                <figure class="devant">
-                  <img src="http://www.jboeijenga.nl/img/front.jpg" alt="devant">
+                  <img src="images/commerce.png" alt="photo costard et montre pour le site e-commerce">
                   <div class="legend">
                      <h2>site <span>&nbsp; e-commerce</span></h2>
                   </div>
@@ -125,7 +125,7 @@
          <article class="contenu">
             <div class="carte">
                <figure class="devant">
-                  <img src="images/internet.jpg" alt="devant">
+                  <img src="images/appli.png" alt="photo smartphone pour application web">
                   <div class="legend">
                      <h2>Application <span>&nbsp;web</span></h2>
                   </div>
@@ -143,12 +143,10 @@
                </figure>
             </div>
          </article>
-      </section>
-      <section class="services2">
          <article class="contenu">
             <div class="carte">
                <figure class="devant">
-                  <img src="images/security.jpg" alt="derriere">
+                  <img src="images/library.png" alt="photo bibliothèque pour référencement">
                   <div class="legend">
                      <h2>Référencement <span>&nbsp;web</span></h2>
                   </div>
@@ -169,7 +167,7 @@
          <article class="contenu">
             <div class="carte">
                <figure class="devant">
-                  <img src="images/security.jpg" alt="derriere">
+                  <img src="images/security.png" alt="photo à la matrix pour sécurité">
                   <div class="legend">
                      <h2>Sécurité <span>&nbsp;web</span></h2>
                   </div>
@@ -194,7 +192,7 @@
          <article class="contenu">
             <div class="carte">
                <figure class="devant">
-                  <img src="images/security.jpg" alt="derriere">
+                  <img src="images/resume.png" alt="photo cachier de texte pour le résumé">
                   <div class="legend">
                      <h2>En <span>&nbsp;Résumé</span></h2>
                   </div>
@@ -230,12 +228,10 @@
                   <div class="social-footer">
                      <ul class="list-social-footer">
                         <li class="icon-footer tipped" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}'>
-                           <a href="https://twitter.com/code_warp" title="lien externe vers le compte Twitter de WarpCode"><i
-                              class="fab fa-twitter"></i></a>
+                           <a href="https://twitter.com/code_warp" title="lien externe vers le compte Twitter de WarpCode"><img id="logoS" src="images/twitter.png" alt="logo twitter"/></a>
                         </li>
                         <li class="icon-footer tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
-                           <a href="https://www.facebook.com/WarpCode56" title="lien externe vers le compte Facebook de WarpCode"><i
-                              class="fab fa-facebook-f"></i></a>
+                           <a href="https://www.facebook.com/WarpCode56" title="lien externe vers le compte Facebook de WarpCode"><img id="logoS2" src="images/face.png" alt="logo facebook" /> </a>
                         </li>
                      </ul>
                   </div>
