--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -16,6 +16,7 @@
       <meta name="msapplication-TileColor" content="#ffffff">
       <meta name="msapplication-TileImage" content="images/favicon//ms-icon-144x144.png">
       <meta name="theme-color" content="#ffffff">
+      <meta name="language" content="fr">
       <!--================================================== CSS  ================================================== -->
       <link rel="stylesheet" href="css/styleMin.css" />
       <link href="https://fonts.googleapis.com/css?family=Lato|Nunito" rel="stylesheet">
