--- a/services.html
+++ b/services.html
@@ -16,6 +16,7 @@
       <meta name="msapplication-Tilewh1tey" content="#ffffff">
       <meta name="msapplication-TileImage" content="images/favicon//ms-icon-144x144.png">
       <meta name="theme-wh1tey" content="#ffffff">
+      <meta name="language" content="fr">
       <!--******************Meta Facebook**************-->
       <meta property="og:title" content="Warp-Code, Agence Web Créative" />
       <meta property="og:url" content="www.warp-code.fr" />
@@ -73,8 +74,10 @@
          </svg>
       </div>
       <div class="mask3"></div>
+      
+      <h1 class="h1Serv" data-scroll-reveal="enter top move 100px over 0.5s after 0.1s" >Nos Services</h1>
       <section class="services1">
-         <article class="contenu">
+         <article class="contenu" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
             <div class="carte">
                <figure class="devant">
                   <img src="images/vitrine.png" alt="photo tablette-portable pour le site vitrine">
@@ -98,7 +101,7 @@
                </figure>
             </div>
          </article>
-         <article class="contenu">
+         <article class="contenu"  data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
             <div class="carte">
                <figure class="devant">
                   <img src="images/commerce.png" alt="photo costard et montre pour le site e-commerce">
@@ -122,7 +125,7 @@
                </figure>
             </div>
          </article>
-         <article class="contenu">
+         <article class="contenu"  data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
             <div class="carte">
                <figure class="devant">
                   <img src="images/appli.png" alt="photo smartphone pour application web">
@@ -143,7 +146,7 @@
                </figure>
             </div>
          </article>
-         <article class="contenu">
+         <article class="contenu"  data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
             <div class="carte">
                <figure class="devant">
                   <img src="images/library.png" alt="photo bibliothèque pour référencement">
@@ -163,8 +166,8 @@
                   </div>
                </figure>
             </div>
-         </article>
-         <article class="contenu">
+         </article> 
+         <article class="contenu"  data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
             <div class="carte">
                <figure class="devant">
                   <img src="images/security.png" alt="photo à la matrix pour sécurité">
@@ -189,7 +192,7 @@
                </figure>
             </div>
          </article>
-         <article class="contenu">
+         <article class="contenu"  data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
             <div class="carte">
                <figure class="devant">
                   <img src="images/resume.png" alt="photo cachier de texte pour le résumé">
