--- a/services.html
+++ b/services.html
@@ -202,17 +202,13 @@
                </figure>
                <figure class="derriere">
                   <div class="legend">
-                     <p>La sécurisation des données personnelles est devenu un <span class="whitey">enjeu majeur
-                        pour
-                        les utilisateurs et les entreprises</span> lors de leur navigation sur le web. Les
-                        infrastructures d'hébergement de nos sites, c'est-à-dire les serveurs, sont optimisés pour
-                        une
-                        haute sécurité. <br />Nous mettons tout en oeuvre pour permettre un temps de réponse rapide
-                        des
-                        serveurs tout en assurant la capacité de charge du trafic. <br />HTTPS, HSTS, CSP, X-XSS...
-                        nous utilisons tous les outils disponibles pour assurer une fiabilité de performance de nos
-                        sites.
-                     </p>
+                    <p>Nous proposons toutes formes de sites internet : du simple site vitrine au site e-commerce entièrement administrable en passant par l'application web. 
+
+                        Nous développons <span class="whitey">votre site web sur-mesure</span>. Son ergonomie est pensée afin d'assurer une expérience utilisateur optimale tout en restant simple d'utilisation. Nous faisons converger vos besoins tout en prenant en compte les réalités du marché et le profil de votre cible. Nous vous conseillons au mieux pour faire converger vos idées avec les codifications spécifiques en vigueur sur internet.<br />Les sites que nous développons sont <span class="whitey">personnalisés</span>, <span class="whitey">modulables</span> et <span class="whitey">évolutifs</span>. Dès la conception de l'architecture du code de votre site web, nous envisageons avec vous tout le potentiel que vous pouvez atteindre. <br />
+                        
+                        Votre site web se doit d'être visuellement attractif et offrir une navigation confortable sur tous types de supports. Ainsi votre site est codé de façon à garder toutes ses qualités aussi bien sur les différentes tailles d'écrans de smartphones, tablettes, petits & grands écrans et ce, quel que soit son fabricant mais également sur tous les navigateurs du marché (Mozilla Firefox, Google Chrome, Opera, Edge, Internet Explorer...). <br />Les trois grands piliers qualitatifs indispensables d'un site web réussi sont son aspect <span class="whitey">Responsive Web Design</span> (comprendre : adaptable sur tous les formats), son <span class="whitey">Référencement sur les moteurs de recherche</span> et sa <span class="whitey">Sécurité</span>.</p> 
+                        
+                        </p>
                   </div>
                </figure>
             </div>
