--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
       <meta name="twitter:image:height" content="600">
       <!--================================================== CSS  ================================================== -->
       <link rel="stylesheet" href="css/styleMin.css" />
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-         crossorigin="anonymous">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" >
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito" >
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
       <!-- ==================================================Favicons	================================================== -->
       <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/">
       <link rel="apple-touch-icon" sizes="60x60" href="images/favicon//apple-icon-60x60-min.png">
@@ -531,10 +528,10 @@
                   <div class="social-footer">
                      <ul class="list-social-footer">
                         <li class="icon-footer tipped" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}'>
-                           <a href="https://twitter.com/code_warp" title="lien externe vers le compte Twitter de WarpCode"><i class="fab fa-twitter"></i></a>
+                           <a href="https://twitter.com/code_warp" title="lien externe vers le compte Twitter de WarpCode"><img id="logoS" src="images/twitter.png" alt="logo twitter"/></a>
                         </li>
                         <li class="icon-footer tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
-                           <a href="https://www.facebook.com/WarpCode56" title="lien externe vers le compte Facebook de WarpCode"><i class="fab fa-facebook-f"></i></a>
+                           <a href="https://www.facebook.com/WarpCode56" title="lien externe vers le compte Facebook de WarpCode"><img id="logoS2" src="images/face.png" alt="logo facebook" /></a>
                         </li>
                      </ul>
                   </div>
@@ -560,14 +557,12 @@
                data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>
             <article class="two columns rightFoot" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3">
                <a href="https://twitter.com/code_warp?ref_src=twsrc%5Etfw" title="lien externe pour nous suivre sur twitter" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-lang="fr" data-show-count="false">Nous suivre&nbsp;</a>
-               <div class="g-plus" data-action="share" data-height="28" data-href="https://www.warp-code.fr"></div>
             </article>
          </div>
       </footer>
       <script src="js/jquery-2.1.1.js"></script>
       <script src="js/script.js"></script>
       <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9DliI4M9waCos3TzDYiXIp138WrkBLT8&callback=initMap"></script>
-      <script src="https://apis.google.com/js/platform.js" async defer></script>
       <script async src="https://platform.twitter.com/widgets.js"></script>
    </body>
 </html>
