--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -19,7 +19,6 @@
       <meta name="language" content="fr">
       <!--================================================== CSS  ================================================== -->
       <link rel="stylesheet" href="css/styleMin.css" />
-      <link href="https://fonts.googleapis.com/css?family=Lato|Nunito" rel="stylesheet">
       <!-- ==================================================Favicons	================================================== -->
       <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/">
       <link rel="apple-touch-icon" sizes="60x60" href="images/favicon//apple-icon-60x60.png">
@@ -224,10 +223,10 @@
                   <div class="social-footer">
                      <ul class="list-social-footer">
                         <li class="icon-footer tipped" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}'>
-                           <a href="https://twitter.com/code_warp"><i class="fab fa-twitter"></i></a>
+                           <a href="https://twitter.com/code_warp"><img id="logoS" src="images/twitter.png" alt="logo twitter"/></a>
                         </li>
                         <li class="icon-footer tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
-                           <a href="https://www.facebook.com/WarpCode56"><i class="fab fa-facebook-f"></i></a>
+                           <a href="https://www.facebook.com/WarpCode56"><img id="logoS2" src="images/face.png" alt="logo facebook" /></a>
                         </li>
                      </ul>
                   </div>
